--- a/app/src/main/res/layout/activity_otp.xml
+++ b/app/src/main/res/layout/activity_otp.xml
@@ -29,8 +29,9 @@
             android:layout_width="45dp"
             android:layout_height="45dp"
             android:background="@drawable/ic_square_pin"
-            android:inputType="phone"
+            android:inputType="number"
             android:maxLength="1"
+            android:digits="0123456789"
             android:textAlignment="center"
             android:textColor="@color/grey_900"
             android:textSize="17sp"
@@ -47,7 +48,7 @@
             android:layout_width="45dp"
             android:layout_height="45dp"
             android:background="@drawable/ic_square_pin"
-            android:inputType="phone"
+            android:inputType="number"
             android:maxLength="1"
             android:textAlignment="center"
             android:textSize="17sp"
@@ -62,7 +63,7 @@
             android:layout_width="45dp"
             android:layout_height="45dp"
             android:background="@drawable/ic_square_pin"
-            android:inputType="phone"
+            android:inputType="number"
             android:maxLength="1"
             android:textAlignment="center"
             android:textColor="@color/grey_900"
@@ -78,7 +79,7 @@
             android:layout_width="45dp"
             android:layout_height="45dp"
             android:background="@drawable/ic_square_pin"
-            android:inputType="phone"
+            android:inputType="number"
             android:maxLength="1"
             android:textAlignment="center"
             android:textColor="@color/grey_900"
@@ -94,7 +95,7 @@
             android:layout_width="45dp"
             android:layout_height="45dp"
             android:background="@drawable/ic_square_pin"
-            android:inputType="phone"
+            android:inputType="number"
             android:maxLength="1"
             android:textAlignment="center"
             android:textColor="@color/grey_900"
@@ -110,7 +111,7 @@
             android:layout_width="45dp"
             android:layout_height="45dp"
             android:background="@drawable/ic_square_pin"
-            android:inputType="phone"
+            android:inputType="number"
             android:maxLength="1"
             android:textAlignment="center"
             android:textColor="@color/grey_900"
