--- a/app/src/main/res/layout/fragment_tab_usaha_bengkel.xml
+++ b/app/src/main/res/layout/fragment_tab_usaha_bengkel.xml
@@ -384,6 +384,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="7dp"
+                android:id="@+id/tl_nohp"
                 android:hint="@string/no_ponselmsg_uupercase">
 
                 <EditText
