--- a/app/src/main/res/layout/activity_list_with_filter.xml
+++ b/app/src/main/res/layout/activity_list_with_filter.xml
@@ -17,6 +17,7 @@
     </android.support.design.widget.AppBarLayout>
     
     <LinearLayout
+        android:id="@+id/container_filter"
         android:layout_width="match_parent"
         android:layout_height="80dp"
         android:orientation="vertical"
@@ -57,8 +58,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:scrollbars="vertical"
-            android:layoutAnimation="@anim/layout_animation"
-            android:layout_marginTop="10dp" />
+            android:layoutAnimation="@anim/layout_animation" />
 
     </android.support.v4.widget.SwipeRefreshLayout>
 
