--- a/app/src/main/res/layout/dialog_history_detail.xml
+++ b/app/src/main/res/layout/dialog_history_detail.xml
@@ -107,8 +107,7 @@
                 android:id="@+id/ly_rekomendasi"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:visibility="gone">
+                android:orientation="vertical">
 
                 <TextView
                     android:layout_width="match_parent"
@@ -122,7 +121,7 @@
                     android:background="@drawable/box_shadow"/>
 
                 <android.support.v7.widget.RecyclerView
-                    android:id="@+id/rv_rekomendasi"
+                    android:id="@+id/rv_part_rekomendasi"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
