--- a/app/src/main/res/layout/activity_cash_collection.xml
+++ b/app/src/main/res/layout/activity_cash_collection.xml
@@ -66,6 +66,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/spacing_medium"
                     android:layout_weight="1"
+                    android:visibility="gone"
                     android:textAlignment="center">
 
                     <EditText
