--- a/app/src/main/res/layout/activity_checkin1.xml
+++ b/app/src/main/res/layout/activity_checkin1.xml
@@ -251,6 +251,7 @@
             </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
+                android:id="@+id/tl_kode_pos"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -264,6 +265,7 @@
                     android:layout_height="wrap_content"
                     android:hint="@string/kode_pos_uppercase"
                     android:textSize="14sp"
+                    android:maxLength="5"
                     android:inputType="numberSigned"
                     tools:ignore="LabelFor" />
 
