--- a/app/src/main/res/layout/fragment_tab_usaha_bengkel.xml
+++ b/app/src/main/res/layout/fragment_tab_usaha_bengkel.xml
@@ -170,23 +170,25 @@
                     android:textStyle="bold"
                     android:textSize="12sp"/>
 
-                <RelativeLayout
+                <Button
+                    android:id="@+id/btn_merk_kendaraan"
                     android:layout_width="0dp"
                     android:layout_height="34dp"
                     android:layout_weight="6"
-                    android:background="@drawable/background_edittext">
-
-                    <com.rkrzmail.srv.MultiSelectionSpinner
-                        android:id="@+id/sp_merkKendaraan_usaha"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:textAlignment="center"
-                        android:textStyle="bold"
-                        android:enabled="false"/>
-
-                </RelativeLayout>
+                    android:background="@drawable/background_edittext"
+                    android:drawableEnd="@drawable/ic_arrow_down"
+                    android:drawablePadding="5dp"
+                    android:drawableTint="@color/grey_800"
+                    android:padding="5dp"
+                    android:text="@string/pilih_uppercase"
+                    android:textAlignment="center" />
 
             </LinearLayout>
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/rv_merk_kendaraan"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -205,23 +207,25 @@
                     android:textStyle="bold"
                     android:textSize="12sp"/>
 
-                <RelativeLayout
+                <Button
+                    android:id="@+id/btn_bidang_usaha"
                     android:layout_width="0dp"
                     android:layout_height="34dp"
                     android:layout_weight="6"
-                    android:background="@drawable/background_edittext">
-
-                    <com.rkrzmail.srv.MultiSelectionSpinner
-                        android:id="@+id/sp_bidangUsaha_usaha"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:textAlignment="center"
-                        android:textStyle="bold"
-                        android:enabled="false"/>
-
-                </RelativeLayout>
+                    android:background="@drawable/background_edittext"
+                    android:drawableEnd="@drawable/ic_arrow_down"
+                    android:drawablePadding="5dp"
+                    android:drawableTint="@color/grey_800"
+                    android:padding="5dp"
+                    android:text="@string/pilih_uppercase"
+                    android:textAlignment="center" />
 
             </LinearLayout>
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/rv_bidang_usaha"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
 
             <android.support.design.widget.TextInputLayout
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
@@ -343,23 +347,25 @@
                     android:textStyle="bold"
                     android:textSize="12sp"/>
 
-                <RelativeLayout
+                <Button
+                    android:id="@+id/btn_principal"
                     android:layout_width="0dp"
                     android:layout_height="34dp"
                     android:layout_weight="6"
-                    android:background="@drawable/background_edittext">
-
-                    <com.rkrzmail.srv.MultiSelectionSpinner
-                        android:id="@+id/sp_namaPrincial_usaha"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:textAlignment="center"
-                        android:textStyle="bold"
-                        android:enabled="false"/>
-
-                </RelativeLayout>
+                    android:background="@drawable/background_edittext"
+                    android:drawableEnd="@drawable/ic_arrow_down"
+                    android:drawablePadding="5dp"
+                    android:drawableTint="@color/grey_800"
+                    android:padding="5dp"
+                    android:text="@string/pilih_uppercase"
+                    android:textAlignment="center" />
 
             </LinearLayout>
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/rv_principal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
 
             <android.support.design.widget.TextInputLayout
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
