--- a/app/src/main/res/layout/activity_checkin1.xml
+++ b/app/src/main/res/layout/activity_checkin1.xml
@@ -50,7 +50,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical|right"
-                    android:layout_marginEnd="20dp"
+                    android:layout_marginEnd="10dp"
+                    android:layout_marginTop="2dp"
                     android:visibility="gone"
                     tools:ignore="RtlHardcoded" />
 
@@ -214,8 +215,10 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical|right"
-                        android:layout_marginRight="20dp"
-                        android:visibility="gone" />
+                        android:layout_marginEnd="10dp"
+                        android:layout_marginTop="2dp"
+                        android:visibility="gone"
+                        tools:ignore="RtlHardcoded" />
 
                 </FrameLayout>
 
