--- a/app/src/main/res/layout/activity_atur_discount_loyalty.xml
+++ b/app/src/main/res/layout/activity_atur_discount_loyalty.xml
@@ -18,6 +18,43 @@
             android:orientation="vertical"
             android:padding="5dp">
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/paddingMedium"
+                android:layout_marginBottom="@dimen/paddingMedium"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_height="wrap_content"
+                    android:text="KATEGORI DISCOUNT"
+                    android:layout_width="0dp"
+                    android:layout_weight="3"
+                    android:textColor="@color/grey_900"
+                    android:textStyle="bold"
+                    android:textSize="12sp"/>
+
+                <Button
+                    android:id="@+id/btn_kategori_disc"
+                    android:layout_width="0dp"
+                    android:layout_height="34dp"
+                    android:layout_weight="6"
+                    android:background="@drawable/background_edittext"
+                    android:drawableEnd="@drawable/ic_arrow_down"
+                    android:drawablePadding="5dp"
+                    android:drawableTint="@color/grey_800"
+                    android:padding="5dp"
+                    android:text="@string/pilih_uppercase"
+                    android:textAlignment="center" />
+
+            </LinearLayout>
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/rv_kategori_disc"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
             <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
@@ -26,6 +63,7 @@
                     android:id="@+id/tl_nohp"
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:layout_width="match_parent"
+                    android:layout_marginTop="10dp"
                     android:layout_height="wrap_content">
 
                     <com.rkrzmail.srv.NikitaAutoComplete
