--- a/app/src/main/res/layout/activity_registrasi_bengkel.xml
+++ b/app/src/main/res/layout/activity_registrasi_bengkel.xml
@@ -299,7 +299,7 @@
 
 
                 <ProgressBar
-                    android:id="@+id/pb_et_kotakab_regist"
+                    android:id="@+id/pb_et_kotakab"
                     style="?android:attr/progressBarStyleSmall"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
