--- a/app/src/main/res/layout/item_rincian_pembayaran_layanan.xml
+++ b/app/src/main/res/layout/item_rincian_pembayaran_layanan.xml
@@ -69,7 +69,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/btn_rounded_accent"
-        android:text="SCAN DISCOUNT LOYALTY"
+        android:text="SCAN VOUCHER DISCOUNT"
         android:textColor="@android:color/white"
         android:textSize="12sp"
         android:layout_marginTop="10dp"/>
@@ -533,6 +533,7 @@
                     android:layout_marginTop="5dp">
 
                     <TextView
+                        android:id="@+id/tv_tittle_voucher_disc"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="DISCOUNT LOYALTY"
@@ -541,7 +542,7 @@
                         android:textSize="12sp" />
 
                     <TextView
-                        android:id="@+id/tv_disc_loyalty"
+                        android:id="@+id/tv_voucher_disc"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Rp. 0 "
